// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`E2E test > add.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "3
",
}
`;

exports[`E2E test > builtin_some_name.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "30
3
",
}
`;

exports[`E2E test > closure.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "42
45
",
}
`;

exports[`E2E test > define.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": ""Hello, World!"
",
}
`;

exports[`E2E test > define_builtin.scm > snapshot test 1`] = `
{
  "exitCode": 1,
  "stderr": "set! builtin is not allowed
",
  "stdout": "",
}
`;

exports[`E2E test > define_in_let.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "1
2
3
",
}
`;

exports[`E2E test > display.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "(2 . (() . ("hello" . ((1 . (2 . ())) . (abc . (efg . (abc . ())))))))
",
}
`;

exports[`E2E test > get_builtin.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "3
",
}
`;

exports[`E2E test > global_duplication.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "2
2
3
3
4
4
",
}
`;

exports[`E2E test > if.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": ""True1"
"False2"
",
}
`;

exports[`E2E test > if_nest.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": ""1"
"8"
"10"
"16"
",
}
`;

exports[`E2E test > lambda.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "42
",
}
`;

exports[`E2E test > large_rec.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "0
",
}
`;

exports[`E2E test > let_in_global.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "1
2
3
4
1
2
",
}
`;

exports[`E2E test > let_in_local.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "1
2
3
4
1
2
",
}
`;

exports[`E2E test > list_syntax.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "()
(1 . (2 . (3 . (4 . ()))))
(1 . (2 . (3 . (4 . 5))))
(1 . (2 . (3 . (4 . ()))))
1
",
}
`;

exports[`E2E test > local_duplication.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "1
2
3
2
3
4
",
}
`;

exports[`E2E test > local_duplication2.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "2
3
",
}
`;

exports[`E2E test > mut_cell_args.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "1
2
2
",
}
`;

exports[`E2E test > not_definable.scm > snapshot test 1`] = `
{
  "exitCode": 1,
  "stderr": "CompilerError: Define is not allowed in this context: b
",
  "stdout": "",
}
`;

exports[`E2E test > num_cmp.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "#t
#f

#f
#f
#t

#f
#t
#f

#t
#f
#t

#t
#t
#f

",
}
`;

exports[`E2E test > rec.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "5050
",
}
`;

exports[`E2E test > set_builtin.scm > snapshot test 1`] = `
{
  "exitCode": 1,
  "stderr": "set! builtin is not allowed
",
  "stdout": "",
}
`;

exports[`E2E test > tak.b.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "7
",
}
`;

exports[`E2E test > vector.scm > snapshot test 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "#()
#(1 2 3)
#(1 2 3)
2
#(1 4 3)
#(1 4 3)
",
}
`;
